created volume and changed rogue cvproai to hopeBench

--- a/backend/.env.exemple
+++ b/backend/.env.exemple
@@ -1,5 +1,5 @@
 # url to docker-compose postgresql
-DATABASE_URL=postgresql://postgres:postgres@localhost/cvproai
+DATABASE_URL=postgresql://postgres:postgres@localhost/hopeBench
 
 # ATTENTION AU SLASH DE FIN
 KEYCLOAK_SERVER_URL=http://localhost:9090/
