--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,3 +45,6 @@ services:
     command: start-dev --import-realm
     volumes:
       - ./docker/keycloak:/opt/keycloak/data
+
+volumes:
+  postgres_data:
