--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,8 @@ stages:
   - build
 
 variables:
-  CONTAINER_IMAGE: $REGISTRY_URL/hope_bench:$CI_COMMIT_SHORT_SHA
-  CONTAINER_IMAGE_LATEST: $REGISTRY_URL/hope_bench:latest
+  CONTAINER_IMAGE: $REGISTRY_URL/hopebench:$CI_COMMIT_SHORT_SHA
+  CONTAINER_IMAGE_LATEST: $REGISTRY_URL/hopebench:latest
 
 build-docker:
   stage: build
