--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ build-docker:
   stage: build
   extends: .docker
   script:
-    - docker build -f Dockerfile.prod -t test .
+    - docker build -f Dockerfile.prod -t $CONTAINER_IMAGE .
   except:
     refs:
       - main
