--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -10,10 +10,8 @@ RUN npm run build
 
 FROM python:3.10-slim-buster
 
-# folder must be named backend for alembic to work
 WORKDIR /app/backend
 
-# needed for psycopg2 install -> SQLAlchemy with postgresql
 RUN apt-get update && \
     apt-get install -y libpq-dev gcc
 
@@ -21,22 +19,13 @@ COPY ./backend /app/backend
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-# copying built front into backend static folder (which is routed in fastapi)
-COPY --from=front-builder app/dist /app/backend/src/front
+COPY --from=front-builder /app/dist /app/backend/src/front
 
 EXPOSE 8000
 
-# Script launched on startup, used to add configuration to frontend part at runtime, not build
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod 755 /entrypoint.sh
+
 ENTRYPOINT ["/entrypoint.sh"]
-
-ENV DATABASE_URL=$DATABASE_URL2
-
-ENV KEYCLOAK_AUTHORIZATION_URL="http://20.19.81.10:8080/realms/hope-bench/protocol/openid-connect/auth"
-ENV KEYCLOAK_CLIENT_FRONT_ID="hope-bench-front"
-ENV KEYCLOAK_REALM="hope-bench"
-ENV KEYCLOAK_SERVER_URL="https://kccv.azurewebsites.net/"
-ENV KEYCLOAK_TOKEN_URL="https://kccv.azurewebsites.net/realms/hope-bench/protocol/openid-connect/token"
 
 CMD ["uvicorn", "src.main:app", "--proxy-headers", "--host", "0.0.0.0", "--port", "8000"]
