--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.51.23",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
@@ -17,6 +18,7 @@
     "formik": "^2.4.6",
     "keycloak-js": "^22.0.5",
     "react": "^18.3.1",
+    "react-admin": "^5.1.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.9.0",
     "react-bootstrap-pagination-control": "^1.0.5",
