--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -10,8 +10,10 @@ RUN npm run build
 
 FROM python:3.10-slim-buster
 
+# folder must be named backend for alembic to work
 WORKDIR /app/backend
 
+# needed for psycopg2 install -> SQLAlchemy with postgresql
 RUN apt-get update && \
     apt-get install -y libpq-dev gcc
 
@@ -19,10 +21,12 @@ COPY ./backend /app/backend
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY --from=front-builder /app/dist /app/backend/src/front
+# copying built front into backend static folder (which is routed in fastapi)
+COPY --from=front-builder app/dist /app/backend/src/front
 
 EXPOSE 8000
 
+# Script launched on startup, used to add configuration to frontend part at runtime, not build
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod 755 /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
