--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -10,19 +10,21 @@ RUN npm run build
 
 FROM python:3.10-slim-buster
 
-# folder must be named backend for alembic to work
+# Folder must be named backend for Alembic to work
 WORKDIR /app/backend
 
-# needed for psycopg2 install -> SQLAlchemy with postgresql
+# Install dependencies needed for psycopg2 and clean up
 RUN apt-get update && \
-    apt-get install -y libpq-dev gcc
+    apt-get install -y libpq-dev gcc && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
 COPY ./backend /app/backend
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-# copying built front into backend static folder (which is routed in fastapi)
-COPY --from=front-builder app/dist /app/backend/src/front
+# Copy built front into backend static folder (which is routed in FastAPI)
+COPY --from=front-builder /app/dist /app/backend/src/front
 
 EXPOSE 8000
 
@@ -31,4 +33,5 @@ COPY entrypoint.sh /entrypoint.sh
 RUN chmod 755 /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
 
-#CMD ["uvicorn", "src.main:app", "--proxy-headers", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "src.main:app", "--proxy-headers", "--host", "0.0.0.0", "--port", "8000"]
+
