--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -15,9 +15,7 @@ WORKDIR /app/backend
 
 # Install dependencies needed for psycopg2 and clean up
 RUN apt-get update && \
-    apt-get install -y libpq-dev gcc && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+    apt-get install -y libpq-dev gcc
 
 COPY ./backend /app/backend
 
@@ -25,7 +23,6 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy built front into backend static folder (which is routed in FastAPI)
 COPY --from=front-builder app/dist /app/backend/src/front
-
 
 EXPOSE 8000
 
