--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.9.0",
     "react-bootstrap-pagination-control": "^1.0.5",
+    "react-checkbox-tree": "^1.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-notifications-component": "^4.0.1",
