--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,12 +25,15 @@
     "react-bootstrap-pagination-control": "^1.0.5",
     "react-checkbox-tree": "^1.8.0",
     "react-dom": "^18.2.0",
+    "react-dropdown-select": "^4.11.3",
     "react-icons": "^5.0.1",
     "react-notifications-component": "^4.0.1",
     "react-numeric-input": "^2.2.3",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.18.0",
+    "react-scroll": "^1.9.0",
+    "react-select": "^5.8.1",
     "react-tagsinput": "^3.20.3",
     "react-textarea-autosize": "^8.5.3",
     "rsuite": "^5.70.0",
@@ -44,6 +47,7 @@
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.2.7",
     "@types/react-numeric-input": "^2.2.7",
+    "@types/react-scroll": "^1.8.10",
     "@types/react-tagsinput": "^3.20.2",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
