--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "@tanstack/react-query": "^5.51.23",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
-    "bootstrap-icons": "^1.11.2",
+    "bootstrap-icons": "^1.11.3",
     "flat": "^6.0.1",
     "formik": "^2.4.6",
     "keycloak-js": "^22.0.5",
@@ -37,6 +37,7 @@
     "react-tagsinput": "^3.20.3",
     "react-textarea-autosize": "^8.5.3",
     "rsuite": "^5.70.0",
+    "typeface-inter": "^3.18.1",
     "usehooks-ts": "^2.9.1",
     "uuid": "^9.0.1",
     "zod": "^3.22.4",
